--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
             <div class="input-group mb-3 w-50 mx-auto mt-3">
                 <input id="search-field" type="text" class="form-control" placeholder="Search the book you want"
                     aria-label="Recipient's username" aria-describedby="button-addon2">
-                <button onclick="searchBook()" class="btn btn-success fw-bold" type="button"
-                    id="button-search">search book</button>
+                <button onclick="searchBook()" class="btn btn-success fw-bold" type="button" id="button-search">search
+                    book</button>
             </div>
-
+            <!-- total search result -->
+            <div id="total-result">
+                
+            </div>
             <!-- search result -->
-            <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
+            <div id="search-result" class="container row row-cols-1 row-cols-md-3 g-3 mx-auto ">
 
             </div>
         </figure>
