--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
+    <!--  -->
+    <style>
+        #spinner {
+            visibility: hidden;
+        }
+    </style>
 </head>
 
 <body>
-    <main>
-
+    <main class=" bg-muted">
         <figcaption>
             <!-- Heading -->
             <h2 class=" text-center text-success fw-bold mt-5 ">Search your favourit Book</h2>
         </figcaption>
 
         <figure>
-
             <!-- search input -->
             <div class="input-group mb-3 w-50 mx-auto mt-3">
                 <input id="search-field" type="text" class="form-control" placeholder="Search the book you want"
@@ -28,27 +33,36 @@
                 <button onclick="searchBook()" class="btn btn-success fw-bold" type="button" id="button-search">search
                     book</button>
             </div>
+
+
+            <!-- spinner -->
+            <div id="spinner" class="text-center">
+                <div class=" spinner-border text-success " role="status">
+                    <span class=" visually-hidden ">Loading...</span>
+                </div>
+            </div>
+
+
             <!-- total search result -->
-            <div id="total-result">
-                
+            <div id="total-result" class="container">
+
             </div>
             <!-- search result -->
             <div id="search-result" class="container row row-cols-1 row-cols-md-3 g-3 mx-auto ">
 
             </div>
         </figure>
-
     </main>
 
 
 
 
-    <!-- custom js -->
-    <script src="js/app.js"></script>
     <!-- Bootstrap Js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
+    <!-- custom js -->
+    <script src="js/app.js"></script>
 </body>
 
 </html>
