--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-    <!--  -->
+    <!-- custom CSS -->
     <style>
         #spinner {
             visibility: hidden;
@@ -26,7 +26,7 @@
         </figcaption>
 
         <figure>
-            <!-- search input -->
+            <!-- search input field -->
             <div class="input-group mb-3 w-50 mx-auto mt-3">
                 <input id="search-field" type="text" class="form-control" placeholder="Search the book you want"
                     aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -34,6 +34,11 @@
                     book</button>
             </div>
 
+            <!-- error message -->
+
+            <div id="error">
+                
+            </div>
 
             <!-- spinner -->
             <div id="spinner" class="text-center">
@@ -47,7 +52,7 @@
             <div id="total-result" class="container">
 
             </div>
-            <!-- search result -->
+            <!-- display result -->
             <div id="search-result" class="container row row-cols-1 row-cols-md-3 g-3 mx-auto ">
 
             </div>
